--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body {
     background-color: #ecf0f1;
-    color: #2c2c2c;
+    color: #fff;
+    text-align: center;
 }
 
 .form, .greetings {
@@ -9,4 +10,23 @@ body {
 
 .showing {
     display : block;
+}
+
+.bgImage {
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    animation: fadeIn 0.3s linear;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
 }
