--- a/index.css
+++ b/index.css
@@ -48,8 +48,13 @@ button:hover {
     top: 0;
     left: 0;
     width: 98%;
-    font-size: 1.2em;
+    font-size: 1.1em;
     text-align: right;
+}
+.js-date {
+    text-align: left;
+    position: absolute;
+    font-size: 1.1em;
 }
 h1 {
     font-size: 600%;
